--- a/Asteroids.html
+++ b/Asteroids.html
@@ -8,6 +8,6 @@
 
 <body>
   <canvas id="gameCanvas" width="700" height="500"></canvas>
-  <script src="script.js"></script>   
+  <script src="assets/js/script.js"></script>   
 </body>
 </html>
